--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
   <nav id="navbar" class="fixed z-50 flex items-center justify-between w-screen py-4 mx-auto transition-all duration-500 flex-nowrap shadow-dark-mild lg:flex-wrap lg:justify-start backdrop-blur-0" data-twe-navbar-ref>
     <div class="flex flex-wrap items-center justify-between w-full px-8 mx-auto md:px-16">
         <div class="">
-            <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="#"><img class="transition-transform duration-300 ease-in rounded-10 hover:scale-125" src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt="Logo PPLG"></a>
+            <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="javascript:void(0);">
+              <img class="transition-transform duration-300 ease-in rounded-10  hover:scale-125 " src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt="Logo PPLG"></a>
         </div>
     <button
         class="relative z-50 block px-2 text-white bg-transparent border-0 hover:no-underline hover:shadow-none focus:no-underline focus:shadow-none focus:outline-none focus:ring-0 lg:hidden"
@@ -259,7 +260,7 @@
               
               <!-- Dropdown -->
           <div class=" ms-auto" data-twe-dropdown-ref>
-            <button class=" block py-3.5 uppercase text-xs tracking-px text-white font-bold bg-white bg-opacity-20 hover:bg-opacity-10 transition ease-in rounded-10 transition-transform duration-300 hover:scale-125 px-2">smk negeri 2</button>
+            <button class=" block py-3.5 uppercase text-xs tracking-px text-white font-bold bg-white bg-opacity-20 hover:bg-opacity-10  ease-in rounded-10 transition-transform duration-300 hover:scale-125 px-2">smk negeri 2</button>
           </div>
         </div>
     </div>
@@ -513,7 +514,7 @@
           <a href="javascript:void(0)" class="block h-full border-2 border-blue-400 shadow-2xl bg-gray-700/60 rounded-2xl shadow-blue-400/50">
             <img data-fancybox="guru" data-caption="Gambar Guru Sri Wahyuni S.Kom M.Kom" loading="lazy" decoding="async" alt="Gambar Guru Sri Wahyuni S.Kom M.Kom" src="./public/images/guru/guru-yuni.webp" class="object-cover object-top w-full h-44 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
             <h3 class="px-2 mt-4 text-base font-bold text-white sm:text-sm md:text-lg">
-              Sri Wahyuni S.Kom M.Kom
+              Sri Wahyuni S.Pd.,M.Pd
             </h3>
             <p class="max-w-sm px-2 py-3 pb-5 mt-2 text-xs text-gray-300 md:text-base">
               Mengajar Mata Pelajaran : <br> PEMOGRAMAN WEB, P.BERGERAK, dan MPP 
