--- a/kelas10.html
+++ b/kelas10.html
@@ -207,7 +207,7 @@
             <div>
                 <h1 class="text-xs font-semibold text-white sm:text-sm md:text-2xl">Pembelajaran</h1>
                 <p class="hidden mt-3 text-white text-xxs md:text-xs md:block">
-                    Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program
+                    Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program Java 
                 </p>
             </div>
         </div>
@@ -235,7 +235,7 @@
 
 
 <section class="pt-20 bg-black h-fll md:pt-0">
-    <div class="relative z-10 h-full bg-fixed bg-center bg-cover bg-black/50" style="background-color: rgba(0, 0, 0, 0.712); background-image: url('./public/images/kelashtml/kelas10-bg.jpg'); background-blend-mode: overlay;">
+    <div class="relative z-10 h-full bg-fixed bg-center bg-cover" style="background-color: rgba(0, 0, 0, 0.912); background-image: url('./public/images/kelashtml/kelas10-bg.webp'); background-blend-mode: overlay;">
         <div class="absolute top-0 left-0 z-10 w-full bg-gradient-to-b from-black via-transparent to-transparent h-44"></div>
   
         <div class="absolute bottom-0 left-0 z-10 w-full bg-gradient-to-t from-black via-transparent to-transparent h-44"></div>
