--- a/kelas11.html
+++ b/kelas11.html
@@ -194,7 +194,7 @@
         <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl">
             PENGEMBANGAN PERANGKAT <br> LUNAK DAN GIM
         </h1>
-        <p class="text-sm text-white lg:text-lg leading-thight">Kelas 10</p>
+        <p class="text-sm text-white lg:text-lg leading-thight">Kelas 11</p>
     </div>
     <div>
         <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-4.webp" alt="">
@@ -206,7 +206,7 @@
             <div>
                 <h1 class="text-xs font-semibold text-white sm:text-sm md:text-2xl">Pembelajaran</h1>
                 <p class="hidden mt-3 text-white text-xxs md:text-xs md:block">
-                    Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program
+                    Memulai pembelajaran dalam pembuatan website, Android Studio, Mempelajari bahasa pemrograman Kotlin dan Dart, Mikrokontroler ESP-32 (Arduino), seperti membuat running text pada LED.
                 </p>
             </div>
         </div>
@@ -234,7 +234,7 @@
 
 
 <section class="pt-20 bg-black h-fll md:pt-0">
-    <div class="relative z-10 h-full bg-fixed bg-center bg-cover bg-black/50" style="background-color: rgba(0, 0, 0, 0.712); background-image: url('./public/images/kelashtml/kelas10-bg.jpg'); background-blend-mode: overlay;">
+    <div class="relative z-10 h-full bg-fixed bg-center bg-cover bg-black/50" style="background-color: rgba(0, 0, 0, 0.712); background-image: url('./public/images/kelashtml/kelas11-bg.webp'); background-blend-mode: overlay;">
         <div class="absolute top-0 left-0 z-10 w-full bg-gradient-to-b from-black via-transparent to-transparent h-44"></div>
   
         <div class="absolute bottom-0 left-0 z-10 w-full bg-gradient-to-t from-black via-transparent to-transparent h-44"></div>
@@ -244,13 +244,12 @@
             <div class="flex flex-col mt-5 lg:flex-row gap-7">
                 <div class="w-full lg:w-7/12">
                     <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
-                        Belajar teknologi itu seru banget, apalagi kalau mulai dari yang basic! Di semester pertama, kamu bakal belajar Microsoft Office, kayak bikin dokumen kece di Word, presentasi yang bikin kagum pake PowerPoint, sampai ngulik data sederhana di Excel. Skills ini tuh wajib banget buat kehidupan sekolah, kuliah, atau kerja nanti!
+                        Belajar teknologi di kelas 11 membawa tantangan baru yang lebih seru dan aplikatif. Kamu akan mendalami pembuatan website dengan elemen yang lebih kompleks, seperti menambahkan interaktivitas, desain responsif, dan integrasi teknologi pendukung. Pembelajaran ini mengasah keterampilanmu dalam merancang website yang menarik dan fungsional, sesuai kebutuhan zaman.</p>
+                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                        Selain itu, kamu akan mengembangkan aplikasi menggunakan Android Studio dengan bahasa pemrograman Kotlin dan Dart. Tidak hanya membuat aplikasi sederhana, tetapi juga belajar tentang konsep yang lebih kompleks, seperti penggunaan API atau penyimpanan data. Proyek ini dirancang untuk menambah pemahamanmu dalam pengembangan aplikasi modern.
                     </p>
                     <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
-                        Nggak cuma itu, kamu juga bakal diajarin editing grafis pakai Photoshop dan CorelDRAW. Di Photoshop, kamu bisa belajar edit foto biar makin aesthetic atau bikin manipulasi gambar yang keren abis. Kalau CorelDRAW, cocok banget buat yang suka bikin desain vektor kayak logo, poster, atau brosur yang bikin mata melirik!
-                    </p>
-                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
-                        Masuk ke dunia coding, semester pertama kamu bakal kenalan sama Bahasa C++ buat belajar logika, algoritma, sampai bikin program sederhana. Terus, semester kedua bakal lebih seru lagi karena kamu belajar Java, bahasa pemrograman yang dipakai buat bikin aplikasi keren. Pokoknya, gabungan materi ini bikin kamu nggak cuma jago teknis, tapi juga kreatif dan siap melangkah ke dunia teknologi masa depan! 🚀
+                        Di mata pelajaran MPP, kamu akan mengerjakan proyek berbasis mikrokontroler ESP-32 (Arduino) dengan fokus yang lebih kreatif. Misalnya, membuat running text LED dengan animasi yang variatif atau fitur interaktif lainnya. Dengan materi ini, kamu tak hanya menguasai teknologi, tetapi juga terlatih untuk berpikir inovatif dan solutif!
                     </p>
                 </div>
                 <div class="w-full lg:w-5/12">
