--- a/kelas10.html
+++ b/kelas10.html
@@ -206,7 +206,7 @@
 
             <div>
                 <h1 class="text-xs font-semibold text-blue-500 sm:text-sm md:text-2xl"data-aos-duration="1000" data-aos="fade-in">Pembelajaran</h1>
-                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block" >
+                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block" data-aos-duration="1000" data-aos="fade-in">
                     Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program Java 
                 </p>
             </div>
