--- a/kelas11.html
+++ b/kelas11.html
@@ -191,10 +191,10 @@
     <div class="absolute inset-0" style="background-color:rgba(0, 0, 0, 0.534)"></div>
 
     <div class="absolute left-0 z-40 flex flex-col justify-center w-full h-full gap-3 p-4 py-32 mt-10 sm:max-w-xl lg:max-w-3xl xs:gap-5 sm:px-32 sm:mt-0 md:-mt-20 xs:py-20">
-        <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl">
+        <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl" data-aos-duration="1000" data-aos="fade-right">
             PENGEMBANGAN PERANGKAT <br> LUNAK DAN GIM
         </h1>
-        <p class="text-sm text-blue-500 lg:text-lg leading-thight">Kelas 11</p>
+        <p class="text-sm text-blue-500 lg:text-lg leading-thight" data-aos-duration="1000" data-aos="fade-up">Kelas 11</p>
     </div>
     <div>
         <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
@@ -204,8 +204,8 @@
         <div class="flex items-center max-w-sm gap-3 md:items-start">
 
             <div>
-                <h1 class="text-xs font-semibold text-blue-500 sm:text-sm md:text-2xl">Pembelajaran</h1>
-                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block">
+                <h1 class="text-xs font-semibold text-blue-500 sm:text-sm md:text-2xl" data-aos-duration="1000" data-aos="fade-in">Pembelajaran</h1>
+                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block"data-aos-duration="1000" data-aos="fade-in">
                     Memulai pembelajaran dalam pembuatan website, Android Studio, Mempelajari bahasa pemrograman Kotlin dan Dart, Mikrokontroler ESP-32 (Arduino), seperti membuat running text pada LED.
                 </p>
             </div>
@@ -240,19 +240,19 @@
         <div class="absolute bottom-0 left-0 z-10 w-full bg-gradient-to-t from-black via-transparent to-transparent h-44"></div>
       
         <div class="p-4 py-10 mx-auto sm:px-32 lg:py-20">
-            <h1 class="text-3xl text-blue-500 font-bebas lg:text-6xl">Ringkasan</h1>
+            <h1 class="text-3xl text-blue-500 font-bebas lg:text-6xl"data-aos-duration="1000" data-aos="fade-right">Ringkasan</h1>
             <div class="flex flex-col mt-5 lg:flex-row gap-7">
                 <div class="w-full lg:w-7/12">
-                    <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                    <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
                         Belajar teknologi di kelas 11 membawa tantangan baru yang lebih seru dan aplikatif. Kamu akan mendalami pembuatan website dengan elemen yang lebih kompleks, seperti menambahkan interaktivitas, desain responsif, dan integrasi teknologi pendukung. Pembelajaran ini mengasah keterampilanmu dalam merancang website yang menarik dan fungsional, sesuai kebutuhan zaman.</p>
-                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
                         Selain itu, kamu akan mengembangkan aplikasi menggunakan Android Studio dengan bahasa pemrograman Kotlin dan Dart. Proyek ini dirancang untuk menambah pemahamanmu dalam pengembangan aplikasi modern.
                     </p>
-                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
                         Di mata pelajaran MPP, kamu akan mengerjakan proyek berbasis mikrokontroler ESP-32 (Arduino) dengan fokus yang lebih kreatif. Misalnya, membuat running text LED dengan animasi yang variatif atau fitur interaktif lainnya. Dengan materi ini, kamu tak hanya menguasai teknologi, tetapi juga terlatih untuk berpikir inovatif dan solutif!
                     </p>
                 </div>
-                <div class="w-full lg:w-5/12 relative">
+                <div class="w-full lg:w-5/12 relative"data-aos-duration="1000" data-aos="fade-left">
                     <img
                         id="carouselImage"
                         class="object-cover rounded-es-3xl rounded-se-3xl w-full h-full transition-opacity duration-1000 opacity-100"
