--- a/kelas12.html
+++ b/kelas12.html
@@ -188,23 +188,23 @@
     <div class="absolute inset-0" style="background-color:rgba(0, 0, 0, 0.534)"></div>
 
     <div class="absolute left-0 z-40 flex flex-col justify-center w-full h-full gap-3 p-4 py-32 mt-10 sm:max-w-xl lg:max-w-3xl xs:gap-5 sm:px-32 sm:mt-0 md:-mt-20 xs:py-20">
-        <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl">
+        <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl"data-aos-duration="1000" data-aos="fade-right">
             PENGEMBANGAN PERANGKAT <br> LUNAK DAN GIM
         </h1>
-        <p class="text-sm text-white lg:text-lg leading-thight">Kelas 10</p>
+        <p class="text-sm text-white lg:text-lg leading-thight" data-aos-duration="1000" data-aos="fade-up">Kelas 12</p>
     </div>
 
     <div>
-        <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-4.webp" alt="">
+        <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-12-4.webp" alt="">
     </div>
 
     <div class="container absolute inset-x-0 left-0 z-40 flex items-start justify-center w-full mx-auto center -bottom-16 xs:-bottom-10 sm:bottom-14 gap-7 px-28">
         <div class="flex items-center max-w-sm gap-3 md:items-start">
 
             <div>
-                <h1 class="text-xs font-semibold text-white sm:text-sm md:text-2xl">Pembelajaran</h1>
-                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block">
-                    Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program
+                <h1 class="text-xs font-semibold text-white sm:text-sm md:text-2xl"data-aos-duration="1000" data-aos="fade-in">Pembelajaran</h1>
+                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block"data-aos-duration="1000" data-aos="fade-in">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam atque saepe nisi quaerat ipsam rerum quod unde. Similique possimus soluta eaque, ullam assumenda mollitia tenetur 
                 </p>
             </div>
         </div>
@@ -238,21 +238,21 @@
         <div class="absolute bottom-0 left-0 z-10 w-full bg-gradient-to-t from-black via-transparent to-transparent h-44"></div>
       
         <div class="p-4 py-10 mx-auto sm:px-32 lg:py-20">
-            <h1 class="text-3xl text-white font-bebas lg:text-6xl">Ringkasan</h1>
+            <h1 class="text-3xl text-white font-bebas lg:text-6xl"data-aos-duration="1000" data-aos="fade-right">Ringkasan</h1>
             <div class="flex flex-col mt-5 lg:flex-row gap-7">
                 <div class="w-full lg:w-7/12">
-                    <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                    <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
                         Belajar teknologi itu seru banget, apalagi kalau mulai dari yang basic! Di semester pertama, kamu bakal belajar Microsoft Office, kayak bikin dokumen kece di Word, presentasi yang bikin kagum pake PowerPoint, sampai ngulik data sederhana di Excel. Skills ini tuh wajib banget buat kehidupan sekolah, kuliah, atau kerja nanti!
                     </p>
-                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
                         Nggak cuma itu, kamu juga bakal diajarin editing grafis pakai Photoshop dan CorelDRAW. Di Photoshop, kamu bisa belajar edit foto biar makin aesthetic atau bikin manipulasi gambar yang keren abis. Kalau CorelDRAW, cocok banget buat yang suka bikin desain vektor kayak logo, poster, atau brosur yang bikin mata melirik!
                     </p>
-                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
                         Masuk ke dunia coding, semester pertama kamu bakal kenalan sama Bahasa C++ buat belajar logika, algoritma, sampai bikin program sederhana. Terus, semester kedua bakal lebih seru lagi karena kamu belajar Java, bahasa pemrograman yang dipakai buat bikin aplikasi keren. Pokoknya, gabungan materi ini bikin kamu nggak cuma jago teknis, tapi juga kreatif dan siap melangkah ke dunia teknologi masa depan! 🚀
                     </p>
                 </div>
                 <div class="w-full lg:w-5/12">
-                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl" loading="lazy" decoding="async" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-1.webp" alt="">
+                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl"data-aos-duration="1000" data-aos="fade-right"  loading="lazy" decoding="async" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-1.webp" alt="">
                 </div>
             </div>
         </div>
