--- a/galeri.html
+++ b/galeri.html
@@ -296,8 +296,8 @@ margin: 0;
       <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
         <div class="relative flex items-end !text-white h-128 p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="height: 300px; border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full"
-            src="./public/images/kelas-rpl/kelas-rpl-labor" alt="Kelas RPL">
-          <a href="./public/images/kelas-rpl/kelas-rpl-labor" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
+            src="./public/images/kelas-rpl/kelas-rpl-labor-2.webp" alt="Kelas RPL">
+          <a href="./public/images/kelas-rpl/kelas-rpl-labor-2.webp" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
                 <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -383,8 +383,8 @@ margin: 0;
       <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
         <div class="relative flex items-end !text-white h-128 p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="height: 300px; border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full"
-            src="./public/images/kelas-rpl/kelas-rpl-10-ppl" alt="Kelas RPL">
-          <a href="./public/images/kelas-rpl/kelas-rpl-10-ppl" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
+            src="./public/images/kelas-rpl/kelas-rpl-10-ppl-1.webp" alt="Kelas RPL">
+          <a href="./public/images/kelas-rpl/kelas-rpl-10-ppl-1.webp" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
                 <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -452,8 +452,8 @@ margin: 0;
         <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
           <div class="relative flex items-end !text-white h-128 p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="height: 300px; border: 3px solid rgb(126, 118, 118);">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/kelas-rpl/kelas-rpl-11" alt="Kelas RPL">
-            <a href="./public/images/kelas-rpl/kelas-rpl-11" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
+              src="./public/images/kelas-rpl/kelas-rpl-11.webp" alt="Kelas RPL">
+            <a href="./public/images/kelas-rpl/kelas-rpl-11.webp" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
               <div class="relative">
                 <div class="flex items-center justify-between mb-20">
                   <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -501,8 +501,8 @@ margin: 0;
       <div class="w-full px-4 mb-8 lg:w-1/3 lg:mb-0">
         <div class="relative flex items-end !text-white h-128 p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="height: 300px; border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full"
-            src="./public/images/kelas-rpl/kelas-rpl-12" alt="Kelas RPL">
-          <a href="./public/images/kelas-rpl/kelas-rpl-12" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
+            src="./public/images/kelas-rpl/kelas-rpl-12.webp" alt="Kelas RPL">
+          <a href="./public/images/kelas-rpl/kelas-rpl-12.webp" data-fancybox="kelas-rpl" data-caption="Kelas RPL 11-2">
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
                 <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -638,10 +638,20 @@ margin: 0;
         shuffledImages: [],
         init() {
           this.shuffledImages = this.images.sort(() => Math.random() - 0.5);
+  
+          // Preload all images
+          this.shuffledImages.forEach((item) => {
+            const link = document.createElement('link');
+            link.rel = 'preload';
+            link.as = 'image';
+            link.href = item.image;
+            document.head.appendChild(link);
+          });
         },
       };
     }
   </script>
+  
   
           
 
